fix: keep diagnosis service compatible with Java 17